<resources>
    <string name="app_name">Walk with me App</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_steps">Number of Steps</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_fragment_account">Account</string>
    <string name="start_count_step">0</string>
    <string name="start_duration">00:00</string>
    <string name="start_distance">0</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="date_of_birth">birthday</string>
    <string name="current_weight">Enter weight</string>
    <string name="height">Your height</string>
    <string name="camera">Camera</string>
    <string name="home_nav_title">Home</string>
    <string name="account_nav_title">Account</string>
    <string name="pref_distance_title">Distance</string>
    <string name="pref_weight_title">Default Metric Unit System</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="cal_count">0</string>
    <string name="cal_label">Calories</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="target_weight">Target Weight</string>
    <string name="progressLabel">Progress</string>
    <string name="weightSysText">Metric System</string>
    <string name="target_steps">Target Steps</string>
    <string name="save_settings">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_nav_title">Camera</string>
    <string name="con_photo">Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="save">Save</string>
    <string name="kilograms">KG</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="weight">Weight</string>
    <string name="update">Update</string>
    <string name="dismiss">Dismiss</string>
    <string name="display">Display Weights</string>
    <string name="goal_nav">History</string>
    <string name="password">Password</string>
    <string name="password_change">New Password</string>
    <string name="weight_target">0</string>
    <string name="weights_title">Target Weight</string>
</resources>
